--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 authors = ["Daniel Fraenkel <e.d.fraenkel@gmail.com>"]
 
 [dependencies]
+serde = "^0.8"
+serde_derive = "^0.8"
+serde_json = "^0.8"
+enum_primitive = "^0.1"
+num = "^0.1"
